# Tw_stock_ML

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-publish.yml
docker/: Dockerfile  build.sh  docker-compose.yaml
src/: main.py
src/database/: __init__.py  connection.py  stock_repository.py
src/metrics/: __init__.py  direction_metrics.py  price_metrics.py
src/model/: __init__.py  xgboost_model.py
src/preprocessing/: __init__.py  feature_engineer.py  pipeline.py  scaler.py  split.py  technical_indicators.py
src/utils/: logger.py
src/web/: __init__.py
src/web/routes/: __init__.py  api.py  dashboard.py
src/web/static/css/: main.css
src/web/static/js/: app.js  chart.js
src/web/templates/: base.html  dashboard.html
tests/: test_connection.py  test_direction_metrics.py  test_feature_engineer.py  test_forward_pipeline.py  test_indicator_pipeline.py  test_logger.py  test_main.py  test_pipeline.py  test_price_metrics.py  test_return_evaluation.py  test_scaler.py  test_sliding_window.py  test_split.py  test_stock_repository.py  test_technical_indicators.py  test_web.py  test_xgboost_model.py
