[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-ml"
version = "0.1.0"
description = "台股機器學習分析系統"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "sqlalchemy",
    "pymysql",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["src*"]
