[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-ml"
version = "0.3.0"
description = "台股機器學習分析系統"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "sqlalchemy",
    "pymysql",
    "cryptography",
    "flask",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.web" = [
    "templates/**/*.html",
    "static/**/*.css",
    "static/**/*.js",
]
